<resources>
    <string name="app_name">Chuck Norris Jokes</string>
    <string name="default_text">Click to load joke</string>
    <string name="loading_text">Loading...</string>
    <string name="firstname_hint">Chuck</string>
    <string name="lastname_hint">Norris</string>
    <string name="explicit">Explicit</string>
    <string name="nerdy">Nerdy</string>
    <string name="query_error">If you try to make jokes about Chuck Norris, he comes to your house and cuts the internet.</string>
</resources>
