<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.chuck.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1">
        <EditText
            android:id="@+id/edit_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:minWidth="120dp"
            android:layout_column="0"
            android:layout_row="0"
            android:inputType="text"
            android:hint="@string/firstname_hint"/>
        <EditText
            android:id="@+id/edit_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:minWidth="120dp"
            android:layout_column="1"
            android:layout_row="0"
            android:inputType="text"
            android:hint="@string/lastname_hint"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:text="Filters:"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/explicit"/>

        <CheckBox
            android:id="@+id/explicit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:tag="explicit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/nerdy"/>

        <CheckBox
            android:id="@+id/nerdy_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:tag="nerdy"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_chuck"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/textview_margin"
            android:background="#11000000"
            android:text="@string/default_text"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/loading_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/textview_margin"
            android:background="#11000000"
            android:text="@string/loading_text"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:visibility="gone"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/loading_indicator"/>
    </FrameLayout>


</LinearLayout>
